<resources>
    <string name="app_name">delify It</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="next">Далее</string>
    <string name="orders">Заказы</string>
    <string name="items">Товары</string>
    <string name="profile">Профиль</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_intext">Войти</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reset">Сбросить</string>
    <string name="input_data">Введите данные</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="type">Тип</string>
    <string name="address">Адрес</string>
    <string name="add">Добавить</string>
    <string name="price">Цена</string>
    <string name="category">Категория</string>
    <string name="change">Изменить</string>
    <string name="price_tenge">%d ₸</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="approvement">Подтверждение</string>
    <string name="changes_discard">Все внесенные изменения не сохранятся</string>
    <string name="accept">Принять</string>
    <string name="search">Поиск</string>
    <string name="delete">Удалить</string>
    <string name="delete_confirm">Вы действительно хотитие удалить выбранные товары?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Изменить</string>
    <string name="month">Месяц</string>
    <string name="today">Сегодня</string>
    <string name="year">Год</string>
    <string name="total_orders">Заказов</string>
    <string name="revenue">Выручка</string>
    <string name="sign_out_confirm">Выйти из аккаунта?</string>
    <string name="add_item">Добавить товар</string>
    <string name="create_order">Создать заказ</string>
    <string name="create_order_confirm">Добавить выбранные товары в заказ?</string>
    <string name="decline">Отменить</string>
    <string name="done">Готов</string>
    <string name="quantity">Количество: %d</string>
    <string name="order_id">Заказ №: %s</string>
    <string name="invalid_credentials">Неверный email или пароль</string>
    <string name="user_email_already_exists">Аккаунт с таким email уже существует</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="reset_password_title">Мы пришлем письмо для восстановления на почту</string>
    <string name="tenge">₸</string>
    <string name="empty_field">Поле не должно быть пустым</string>
    <string name="invalid_characters">Поле содержит недопустимые символы</string>
    <string name="select_image">Выберите изображение</string>
    <string name="select_category">Выберите категорию</string>
    <string name="select_type">Выберите тип</string>
    <string name="no_orders">Заказов пока нет</string>
    <string name="add_first_item">Добавьте свой первый товар!</string>
</resources>