<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.main.tabs.items.AddItemFragment">

    <TextView
        android:id="@+id/text_view_input_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_image_wrapper"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_input_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/image_view_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder_image"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/card_view_image_wrapper"
        app:layout_constraintTop_toBottomOf="@id/card_view_image_wrapper"
        app:layout_constraintEnd_toEndOf="@id/card_view_image_wrapper"
        android:hint="@string/name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_input_name"
        app:layout_constraintStart_toStartOf="@id/layout_input_name"
        app:layout_constraintEnd_toEndOf="@id/layout_input_name"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/layout_input_description"
        app:layout_constraintEnd_toEndOf="@id/layout_input_description"
        app:layout_constraintTop_toBottomOf="@id/layout_input_description"
        android:hint="@string/price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_price"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_select_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_input_address"
        app:layout_constraintStart_toStartOf="@id/layout_input_description"
        app:layout_constraintEnd_toEndOf="@id/layout_input_description"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/category"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/layout_select_type"
        app:layout_constraintStart_toStartOf="@id/layout_select_type"
        app:layout_constraintEnd_toEndOf="@id/layout_select_type"/>

</androidx.constraintlayout.widget.ConstraintLayout>